update on the syling in the call to action

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <div class="page-intro">
     <h2>I'm Sunny</h2>
     <p>Full stack developer at you diposal</p>
+    <h4>Ruby/Rails, Php/Laravel, Js/React  </h4>
     <div class="cta">
         <button class="talk">Talk to me</button>
         <button class="portfolio">See Portfolio!</button>
