added new style and art to header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="header">
   <nav class="nav-bar">
     <div class="logo">
-      SUNNY
+      <!-- SUNNY -->
     </div>
     <div class="nav-links">
       <li class="nav-link">Home</li>
@@ -23,8 +23,8 @@
 
 <main class="main-content">
   <div class="page-intro">
-    <h2>I'm Sunny</h2>
-    <p>Full stack developer at you diposal</p>
+    <h2>I'm Sunny Asar </h2>
+    <p> Brother, Friend, Full stack developer, Very Unemployed. </p>
     <h4>Ruby/Rails, Php/Laravel, Js/React  </h4>
     <div class="cta">
         <button class="talk">Talk to me</button>
